Thu, Jun 20, 2024, 12:38 PM +07:00

--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <head></head>
     <body>
         <h1>мой сайт</h1>
-        <p>я учусь в <a href="https://www.tspu.edu.ru> ТГПУ</a></p>
+        <p>я учусь в <a href="https://www.tspu.edu.ru"> ТГПУ</a></p>
     </body>
 </html>
