Thu, Jun 20, 2024, 12:43 PM +07:00

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head></head>
     <body>
+        <img src="gerbtspu118.png">
         <h1>мой сайт</h1>
         <p>я учусь в <a href="https://www.tspu.edu.ru"> ТГПУ</a></p>
     </body>
