--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!doctupe html>
 <html>
-    <head></head>
+    <head>
+        <link href="style.css" rel="stylesheet">
+    </head>
     <body>
         <img src="gerbtspu118.png">
         <h1>мой сайт</h1>
