--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!doctupe html>
 <html>
     <head>
-        <link href="style.css" rel="stylesheet">
+        <meta charset="utf-8">
+        <title>Web</title>
     </head>
     <body>
-        <img src="gerbtspu118.png">
-        <h1>мой сайт</h1>
-        <p>я учусь в <a href="https://www.tspu.edu.ru"> ТГПУ</a></p>
+        КРЫМ
     </body>
 </html>
+
+      
